--- a/resources.html
+++ b/resources.html
@@ -14,11 +14,11 @@
                     <li><a href="about.html" class="a_tag">About Me</a></li>
                 </ul>
             </nav>
-            <h1 class="main-band-name main-h1-large-name">Flopcart</h1>
+            <h1 class="main-band-name main-h1-large-name">Fullcart</h1>
         </header>
     
     <section class="container content-section" >
-        <h2 class="section-header">Digital Design</h2>
+        <h2 class="section-header">Books</h2>
         <div class="shop-items">
         <div class="shop-item">
                 <span class="shop-item-title">Source 1</span>
